Google maps jarrita

--- a/urbanNestWeb/index.html
+++ b/urbanNestWeb/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCe-T41TzYzBYxLxwoHFEZaZmnnSeGFhFc&libraries=maps,marker&loading=async"
+      async
+      defer>
+</script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Urban Nest</title>
   </head>
